fixed some issue

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <a href="https://www.instagram.com/saurav_2713/" target="_blank"
               ><i class="bx bxl-instagram-alt"></i
             ></a>
-            <a href=""><i class="bx bxl-twitter"></i></a>
+            <a href="https://x.com/SauravK06395033" target="_blank"><i class="bx bxl-twitter"></i></a>
           </div>
 
           <div class="btn_group">
@@ -179,12 +179,12 @@
         <div class="project_container">
             <div class="project_box">
                 <div class="project_img">
-                    <img src="./images/DALL·E .jpg" alt="">
+                    <img src="./images/zomato (2).webp" alt="">
                 </div>
                 <div class="project_content">
                     <h3>Zomato</h3>
                     <p>Recreated the sleek and modern design of Zomato's landing page to showcase my skills in web design and responsive development.</p>
-                    <a href="#" class="btn2">Source Code</a>
+                    <a href="https://github.com/Saurav-sde/CSS/tree/master/00_PROJECT/01_Zomato" class="btn2">Source Code</a>
                 </div>
             </div>
             <div class="project_box">
@@ -194,7 +194,7 @@
                 <div class="project_content">
                     <h3>Zerodha</h3>
                     <p>Crafted a responsive Zerodha landing page clone using HTML and CSS to showcase my web development skills.</p>
-                    <a href="#" class="btn2">Source Code</a>
+                    <a href="https://github.com/Saurav-sde/CSS/tree/master/00_PROJECT/01_Zomato" class="btn2">Source Code</a>
                 </div>
             </div>
 
@@ -206,7 +206,7 @@
                 <div class="project_content">
                     <h3>Book My Show</h3>
                     <p>Recreated the BookMyShow landing page using HTML and CSS, showcasing responsive design and mastery of CSS Flexbox for layout and alignment.</p>
-                    <a href="#" class="btn2">Source Code</a>
+                    <a href="https://github.com/Saurav-sde/CSS/tree/master/Book_my_show" class="btn2">Source Code</a>
                 </div>
             </div>
         </div>
@@ -325,7 +325,7 @@
             </div>
 
             <div class="testimonial_item">
-              <img src="./images/testi3.jpg" alt="" />
+              <img src="./images/testilast.webp" alt="" />
               <h2>Rebecca</h2>
               <div class="rating">
                 <i class="bx bxs-star" id="star"></i>
@@ -391,7 +391,7 @@
         <a href="https://www.instagram.com/saurav_2713/" target="_blank"
           ><i class="bx bxl-instagram-alt"></i
         ></a>
-        <a href=""><i class="bx bxl-twitter"></i></a>
+        <a href="https://x.com/SauravK06395033"><i class="bx bxl-twitter"></i></a>
       </div>
 
       <ul class="list">
