--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Portfolio_website</title>
     <!-- Global Stylesheet -->
     <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="preloader.css">
     <!-- Section-Specific Stylesheets -->
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sections.css" />
@@ -32,6 +33,19 @@
     />
   </head>
   <body>
+    <section id="loading">
+      <div id="loader">
+          <div class="element">
+              <h3>Saurav Kumar</h3>
+          </div>
+          <div class="element">
+              <h3>Web Developer</h3>
+          </div>
+          <div class="element">
+              <h3>Presents</h3>
+          </div>
+      </div>
+  </section>
     <!-- Header Section -->
     <header class="header">
       <!-- logo with highlighted first and last name -->
