--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Portfolio_website</title>
     <!-- Global Stylesheet -->
     <link rel="stylesheet" href="./css/global.css" />
-    <link rel="stylesheet" href="preloader.css">
+    <link rel="stylesheet" href="./css/preloader.css">
     <!-- Section-Specific Stylesheets -->
     <link rel="stylesheet" href="./css/header.css" />
     <link rel="stylesheet" href="./css/sections.css" />
